fixed errors, added buttons + additional images and stuff

--- a/src/components/Center.astro
+++ b/src/components/Center.astro
@@ -10,8 +10,9 @@ const { children } = Astro.props;
   .center {
     box-sizing: content-box;
     margin-inline: auto;
+    overflow: visible;
     width: calc(100% - (var(--space-xl) * 2));
-    max-inline-size: 700px;
+    max-inline-size: 650px;
     padding-inline: 25px;
   }
 </style>
