--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,13 @@ import StopIndicator from '../components/StopIndicator.astro';
 import StopSign from '../components/StopSign.astro';
 import HeaderRow from '../components/Header.astro';
 import Layout from '../layouts/Layout.astro';
+import Buttons from '../components/Buttons.astro';
+import { getCollection } from 'astro:content';
+import BlogCard from '../components/BlogCard.astro';
 
 const stops = [
-	{ path: "/", title: "1st Avenue Station", logo: "/logos/home.svg" },
-	{ path: "/about", title: "Local 2 St Station", logo: "/logos/about.svg" },
+	{ path: "/", title: "1st Avenue Station", logo: "/logos/ftrain.svg" },
+	{ path: "/about", title: "Local 2 St Station", logo: "/logos/ftrain.svg" },
 	{ path: "/projects", title: "Works Boulevard Station", logo: "/logos/projects.svg" },
 	{ path: "/blog", title: "Journal Road Station", logo: "/logos/blog.svg" },
 	{ path: "/contact", title: "Exchange Avenue", logo: "/logos/contact.svg" }
@@ -14,6 +17,10 @@ const stops = [
 
 const currentPath = Astro.url.pathname;
 const currentStop = stops.find(s => s.path === currentPath) ?? stops[0];
+
+const posts = (await getCollection('blog'))
+	.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+	.slice(0, 2);
 ---
 
 <Layout title="home">
@@ -31,15 +38,37 @@ const currentStop = stops.find(s => s.path === currentPath) ?? stops[0];
 			links={["/", "/about", "/projects", "/blog", "/contact"]}
 			current={Astro.url.pathname}
 		/>
-
-		<div slot="right">
-			<span>v1.0</span>
-		</div>
 	</HeaderRow>
-	<div class="title-header"><h1>froppii.dev</h1></div>
-	<p>
-		hey there! im darlene, a 17 y/o from indonesia! welcome to my little space in the internet that is a hodgepodge of thoughts, works, and connections i care about. in my spare time, you can find me making games, coding sites, doing art, and jamming to music!
-	</p>
+	<div class="intro">
+		<div class="intro-text">
+			<div class="title-header"><h1>froppii.dev</h1></div>
+			<p>
+				hey there! im darlene, a 17 y/o from indonesia! welcome to my little space in the internet that is a hodgepodge of thoughts, works, and connections i care about. in my spare time, you can find me making games, coding sites, doing art, and jamming to music!
+			</p>
+		</div>
+		<img src="a.jpg" alt="random stuff">
+	</div>
+
+	<section class="recent-posts">
+  		<h2>recent writing</h2>
+  		<div class="posts-wrapper">
+    		{posts.map((post, index) => (
+      			<div class={`post-slot ${index === 1 ? 'faded' : ''}`}>
+        			<BlogCard
+          				post={post}
+          				href={`/blog/${post.id}`}
+        			/>
+      			</div>
+    		))}
+
+    		{posts.length > 1 && (
+      			<a href="/blog" class="more-arrow" aria-label="View all posts">
+      			</a>
+    		)}
+  		</div>
+	</section>
+
+	<Buttons />
 
 </Layout>
 
