--- a/src/components/StopSign.astro
+++ b/src/components/StopSign.astro
@@ -19,7 +19,7 @@ const { title, logo, alt = title } = Astro.props;
         grid-template-columns: 1fr auto;
         grid-template-rows: auto auto;
         grid-template-areas: "title title" "logo logo";
-        border: 3px solid #ff4507;
+        border: 2px solid #ff4507;
         width: 100%;
         height: 100%;
         box-sizing: border-box;
@@ -37,7 +37,7 @@ const { title, logo, alt = title } = Astro.props;
     .stop-title {
         grid-area: title;
         font-weight: 800;
-        font-size: clamp(1rem, 3.8vw, 1.6rem);
+        font-size: clamp(16px, 3.8vw, 24px);
         color: #fff;
         line-height: 1.05;
         white-space: normal;
