--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,20 +1,55 @@
 ---
 import { type CollectionEntry, getCollection, render } from 'astro:content';
-import BlogPost from '../../layouts/BlogPost.astro';
+import Layout from '../../layouts/Layout.astro';
+import FormattedDate from '../../components/FormattedDate.astro';
 
 export async function getStaticPaths() {
-	const posts = await getCollection('blog');
-	return posts.map((post) => ({
-		params: { slug: post.id },
-		props: post,
-	}));
+  	const posts = await getCollection('blog');
+  	return posts.map(post => ({
+    	params: { slug: post.id },
+    	props: post,
+  	}));
 }
-type Props = CollectionEntry<'blog'>;
 
 const post = Astro.props;
 const { Content } = await render(post);
 ---
 
-<BlogPost {...post.data}>
-	<Content />
-</BlogPost>
+<Layout title={post.data.title}>
+  	<article class="post-window">
+    	<div class="post-header">
+      		<FormattedDate date={post.data.pubDate} />
+    	</div>
+
+    	<div class="post-body">
+      		<h1>{post.data.title}</h1>
+
+      		{post.data.heroImage && (
+        		<img src={post.data.heroImage} alt={post.data.title} />
+      		)}
+
+      		<Content />
+    	</div>
+  	</article>
+</Layout>
+
+<style>
+.post-window {
+  	color: white;
+}
+
+.post-body {
+  	padding: 1.25rem;
+}
+
+.post-body img {
+  	width: 100%;
+  	max-height: 320px;
+  	object-fit: cover;
+  	margin: 1rem 0;
+}
+
+h1 {
+  	margin-top: 0;
+}
+</style>
