--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,7 +6,7 @@ import StopSign from '../../components/StopSign.astro';
 import HeaderRow from '../../components/Header.astro';
 import FormattedDate from '../../components/FormattedDate.astro';
 import Layout from '../../layouts/Layout.astro';
-import BlogPost from '../../layouts/BlogPost.astro';
+import BlogCard from '../../components/BlogCard.astro';
 
 const posts = (await getCollection('blog')).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
@@ -16,12 +16,12 @@ const stops = [
   { path: "/", title: "1st Avenue Station", logo: "/logos/home.svg" },
   { path: "/about", title: "Local 2 St Station", logo: "/logos/about.svg" },
   { path: "/projects", title: "Works Boulevard Station", logo: "/logos/projects.svg" },
-  { path: "/blog", title: "Journal Road Station", logo: "/logos/blog.svg" },
+  { path: "/blog", title: "Journal Road Station", logo: "/logos/ftrain.svg" },
   { path: "/contact", title: "Exchange Avenue", logo: "/logos/contact.svg" }
 ];
 
 const currentPath = Astro.url.pathname;
-const currentStop = stops.find(s => currentPath.startsWith(s.path)) ?? stops[3];
+const currentStop = stops.find(s => currentPath === s.path || currentPath.startsWith(s.path + "/")) ?? stops[0];
 ---
 
 <Layout title="blog">
@@ -42,11 +42,14 @@ const currentStop = stops.find(s => currentPath.startsWith(s.path)) ?? stops[3];
     </div>
   </HeaderRow>
 
-  <main>
-    <section>
-      {posts.map(post => (
-        <BlogPost post={post} />
-      ))}
-    </section>
-  </main>
+  <h1 class="title-header">blog</h1>
+  <p>
+    i dont write much, but will write more in the future!
+  </p>
+
+  <section class="blog-list">
+    {posts.map(post => (
+      <BlogCard post={post} href={`/blog/${post.id}`} />
+    ))}
+  </section>
 </Layout>
