--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,7 @@ const { title, description, ogImage } = Astro.props;
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>froppii - {title}</title>
+        <link rel="icon" type="image/svg+xml" href="/cat2.svg" />
         <link rel="stylesheet" href="/styles/global.css" />
     </head>
 
