--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,8 +5,8 @@ import HeaderRow from '../components/Header.astro';
 import StopSign from '../components/StopSign.astro';
 
 const stops = [
-	{ path: "/", title: "1st Avenue Station", logo: "/logos/home.svg" },
-	{ path: "/about", title: "Local 2 St Station", logo: "/logos/about.svg" },
+	{ path: "/", title: "1st Avenue Station", logo: "/logos/ftrain.svg" },
+	{ path: "/about", title: "Local 2 St Station", logo: "/logos/ftrain.svg" },
 	{ path: "/projects", title: "Works Boulevard Station", logo: "/logos/ftrain.svg" },
 	{ path: "/blog", title: "Journal Road Station", logo: "/logos/blog.svg" },
 	{ path: "/contact", title: "Exchange Avenue", logo: "/logos/contact.svg" }
