--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -156,9 +156,11 @@ h2 {
 }
 h3 {
 	font-size: 28px;
+	color: #fd6532;
 }
 h4 {
 	font-size: 1.563em;
+	color: #fd6532;
 }
 h5 {
 	font-size: 1.25em;
