--- a/src/components/Buttons.astro
+++ b/src/components/Buttons.astro
@@ -7,7 +7,6 @@
         title="click to copy button link!"
     >
         <img src="/button.gif" alt="froppii">
-        <span class="copied-popup">Copied!</span>
     </button>
     <p>my button! click it to copy</p>
 </section>
@@ -65,6 +64,12 @@
         background: transparent;
         padding: 0;
         height: 100%
+    }
+
+
+    .copy-button.copied {
+        outline: 2px solid #ff4507;
+        outline-offset: 2px;
     }
 
     .buttons {
