--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -27,8 +27,8 @@ const currentStop = stops.find(s => s.path === currentPath) ?? stops[0];
 
 		<StopIndicator
 			slot="center"
-  			stops={["/", "/about", "/projects", "/blog", "/contact"]}
-			links={["/", "/about", "/projects", "/blog", "/contact"]}
+  			stops={["/projects", "/blog", "/contact", "/home", "/about"]}
+			links={["/projects", "/blog", "/contact", "/", "/about"]}
 			current={Astro.url.pathname}
 		/>
 	</HeaderRow>
