--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,8 +67,11 @@ const posts = (await getCollection('blog'))
     		)}
   		</div>
 	</section>
-
+	<pagering-link theme="light"></pagering-link>
 	<Buttons />
 
 </Layout>
+
+<script src="https://pagering.gideon.sh/embed.js" defer></script>
+
 
