--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,9 +67,8 @@ const posts = (await getCollection('blog'))
     		)}
   		</div>
 	</section>
-	<pagering-link theme="light"></pagering-link>
 	<Buttons />
-
+	<pagering-link theme="light"></pagering-link
 </Layout>
 
 <script src="https://pagering.gideon.sh/embed.js" defer></script>
